add new website from server na

--- a/xem-phim-moi/max-dien-con-duong-tu-than/index.html
+++ b/xem-phim-moi/max-dien-con-duong-tu-than/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1665,18 +1665,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-doi-pepe-mujica" title="Cuộc đời Pepe Mujica">
+          <a class="list-top-movie-link" href="/phim-moi/chung-phan-1" title="Chủng (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-doi-pepe-mujica-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chung-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc đời Pepe Mujica
+             Chủng (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             El Pepe, a Supreme Life
+             The Strain (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1687,21 +1687,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-tau-dinh-menh" title="Chuyến Tàu Định Mệnh">
+          <a class="list-top-movie-link" href="/phim-moi/co-nang-kiem-duyet" title="Cô nàng kiểm duyệt">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-tau-dinh-menh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-nang-kiem-duyet-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chuyến Tàu Định Mệnh
+             Cô nàng kiểm duyệt
             </span>
             <span class="list-top-movie-item-en">
-             The Taking of Pelham 1 2 3
+             Pretty Proofreader
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1709,18 +1709,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quyen-cong-dan" title="Quyền Công Dân">
+          <a class="list-top-movie-link" href="/phim-moi/toi-ghet-giang-sinh" title="Tôi ghét Giáng sinh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quyen-cong-dan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-ghet-giang-sinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Quyền Công Dân
+             Tôi ghét Giáng sinh
             </span>
             <span class="list-top-movie-item-en">
-             Citizenfour
+             I Hate Christmas
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1731,18 +1731,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/du-an-mc2-phan-4" title="Dự án Mc2 (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/quai-vat-paris" title="Quái Vật Paris">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/du-an-mc2-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quai-vat-paris-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dự án Mc2 (Phần 4)
+             Quái Vật Paris
             </span>
             <span class="list-top-movie-item-en">
-             Project Mc2 (Season 4)
+             A Monster in Paris
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1753,21 +1753,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tay-dua-kiet-xuat" title="Tay Đua Kiệt Xuất">
+          <a class="list-top-movie-link" href="/phim-moi/suc-nong-mua-he" title="Sức nóng mùa hè">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tay-dua-kiet-xuat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/suc-nong-mua-he-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tay Đua Kiệt Xuất
+             Sức nóng mùa hè
             </span>
             <span class="list-top-movie-item-en">
-             Rally Road Racers
+             Summer Heat
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
