add new website from server na

--- a/xem-phim-moi/max-dien-con-duong-tu-than/index.html
+++ b/xem-phim-moi/max-dien-con-duong-tu-than/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1665,40 +1665,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chung-phan-1" title="Chủng (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/bi-mat-cua-young-joo" title="Bí Mật Của Young-joo">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chung-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bi-mat-cua-young-joo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chủng (Phần 1)
+             Bí Mật Của Young-joo
             </span>
             <span class="list-top-movie-item-en">
-             The Strain (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-nang-kiem-duyet" title="Cô nàng kiểm duyệt">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-nang-kiem-duyet-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cô nàng kiểm duyệt
-            </span>
-            <span class="list-top-movie-item-en">
-             Pretty Proofreader
+             그놈의 비밀섹스
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1709,18 +1687,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/toi-ghet-giang-sinh" title="Tôi ghét Giáng sinh">
+          <a class="list-top-movie-link" href="/phim-moi/detective-k-secret-of-virtuous-widow" title="Detective K: Secret Of Virtuous Widow">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-ghet-giang-sinh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/detective-k-secret-of-virtuous-widow-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tôi ghét Giáng sinh
+             Detective K: Secret Of Virtuous Widow
             </span>
             <span class="list-top-movie-item-en">
-             I Hate Christmas
+             Thám Tử K: Bí Mật Góa Phụ
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1731,21 +1709,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quai-vat-paris" title="Quái Vật Paris">
+          <a class="list-top-movie-link" href="/phim-moi/mua-dong-mot-minh" title="Mùa đông một mình">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quai-vat-paris-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mua-dong-mot-minh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Quái Vật Paris
+             Mùa đông một mình
             </span>
             <span class="list-top-movie-item-en">
-             A Monster in Paris
+             One Man''s Winter
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1753,21 +1731,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/suc-nong-mua-he" title="Sức nóng mùa hè">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-bach-ma-tuy-xuan-phong" title="Thiếu Niên Bạch Mã Túy Xuân Phong">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/suc-nong-mua-he-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-bach-ma-tuy-xuan-phong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sức nóng mùa hè
+             Thiếu Niên Bạch Mã Túy Xuân Phong
             </span>
             <span class="list-top-movie-item-en">
-             Summer Heat
+             Dashing Youth
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             7 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chu-cho-dung-cam" title="Chú Chó Dũng Cảm">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chu-cho-dung-cam-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chú Chó Dũng Cảm
+            </span>
+            <span class="list-top-movie-item-en">
+             Jock the Hero Dog
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
